kubernetes/apps/observability/mariadb/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-metallb
  annotations:
    metallb.universe.tf/allow-shared-ip: local
spec:
  selector:
    app.kubernetes.io/instance: mariadb-galera
    app.kubernetes.io/name: mariadb-galera
    apps.kubernetes.io/pod-index: "0"
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 10.0.0.19
