kubernetes/apps/observability/mariadb/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: mariadb-galera
spec:
  ingressClassName: internal
  rules:
  - host: mariadb.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mariadb-galera
            port:
              number: 3306
